Bug #43429
rbd-mirror daemon command "rbd mirror status" produces invalid JSON
% Done:
0%
Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Description
The trailing brace is missing:
ceph daemon /var/run/ceph/ceph-client.rbd_mirror_backup.$(systemctl show --property MainPID ceph-rbd-mirror@rbd_mirror_backup.service | sed 's/MainPID=//').*.asok rbd mirror status { "pool_replayers": [ { "pool": "rbd", "peer": "uuid: SOME__UUID__HERE cluster: ceph-virt client: client.rbd_mirror", "instance_id": "1371140", "state": "running", "leader_instance_id": "1780996", "leader": false, "local_cluster_admin_socket": "/var/run/ceph/client.rbd_mirror_backup.522106.ceph.93950850517624.asok", "remote_cluster_admin_socket": "/var/run/ceph/client.rbd_mirror.522106.ceph-virt.93950850527864.asok", "sync_throttler": {}, "image_replayers": [] }
Piped into jq, it discards all input silently.
Related issues
History
#1 Updated by Oliver Freyermuth about 1 year ago
Actually, both the trailing ] for "pool_replayers" and the trailing } (matching the very first brace) are missing.
#2 Updated by Mykola Golub about 1 year ago
- Status changed from New to In Progress
- Assignee set to Mykola Golub
#3 Updated by Mykola Golub about 1 year ago
- Backport set to mimic,luminous
#4 Updated by Mykola Golub about 1 year ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 32447
#5 Updated by Yuri Weinstein about 1 year ago
#6 Updated by Jason Dillaman about 1 year ago
- Status changed from Fix Under Review to Pending Backport
#7 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #43625: mimic: rbd-mirror daemon command "rbd mirror status" produces invalid JSON added
#8 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #43626: luminous: rbd-mirror daemon command "rbd mirror status" produces invalid JSON added
#9 Updated by Nathan Cutler 12 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".